# ReeseBot

./: Cargo.toml  README.md
src/: board_state.rs  chess_move.rs  color.rs  engine.rs  evaluation.rs  ideas.txt  main.rs  minimax.rs  move_gen.rs  move_parser.rs  piece.rs  square.rs
