[package]
name = "reese_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
num = "0.4"
rand = "0.8.4"
simple_logger = "5.0.0"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }
